# AppleContainerMCP

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml  test_local.py
.gemini/: settings.json
.github/workflows/: ci.yml
docs/: PRD.md  TDD.md
docs/superpowers/plans/: 2026-04-28-apple-container-0.12-support.md  2026-04-28-cli-audit-results.md
docs/superpowers/specs/: 2026-04-28-apple-container-0.12-support-design.md
src/apple_container_mcp/: __init__.py  cli_wrapper.py  server.py  tools.py
src/apple_container_mcp/tools/: __init__.py  builder.py  containers.py  files.py  images.py  machines.py  networks.py  prompts.py  registry.py  system.py  volumes.py
tests/: conftest.py  test_cli_wrapper.py  test_tools.py
