[project]
name = "applecontainermcp"
version = "0.1.0"
description = "Apple Container MCP Server: A bridge for managing macOS-native containers via natural language."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.1.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
apple-container-mcp = "apple_container_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/apple_container_mcp"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.5",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120
