[project]
name = "applecontainermcp"
version = "0.2.0"
description = "Apple Container MCP Server: A bridge for managing macOS-native containers via natural language."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0,<2.0.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
apple-container-mcp = "apple_container_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/apple_container_mcp"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.5",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

# The tools subpackage uses a circular-import pattern (submodules register against
# the mcp instance defined in __init__.py, which also imports the submodules).
# This is valid at runtime but mypy cannot fully resolve attribute types across
# the circular dependency.  We relax strict mode for these internal submodules
# while keeping it strict for the public API surface.
[[tool.mypy.overrides]]
module = "apple_container_mcp.tools.*"
strict = false
disable_error_code = ["has-type", "attr-defined", "untyped-decorator"]
